[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Props/Breakable_Wall/Breakable_Wall.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.749226, 0.934985 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 30, 30, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.0
gravity = Vector3( 0, 600, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
scale_random = 0.5
color_ramp = SubResource( 4 )

[node name="Breakable_Wall" type="StaticBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="Body" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -32, -32, -32, 32, 32, 32, 32, -32 )

[node name="phys_body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="Area" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="Shake_Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.01

[node name="Break_Particles" type="Particles2D" parent="."]
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Shake_Timer" to="." method="_on_Shake_Timer_timeout"]
